# drf-jwt-knox

./: .gitignore  .travis.yml  MANIFEST.in  README.md  auth.py  pyproject.toml  runtests.py  setup.py  sonar-project.properties  tests.py  tox.ini  urls.py  utils.py  views.py
.github/workflows/: python-package.yml  python-publish.yml  sonarcloud.yml
jwt_knox/: apps.py  auth.py  settings.py  urls.py  utils.py  viewsets.py
requirements/: requirements-django110.txt  requirements-django111lts.txt  requirements-django18.txt  requirements-django19.txt  requirements-django20.txt  requirements-django22lts.txt  requirements-django32lts.txt  requirements-django40.txt  requirements-django41.txt  requirements-django42lts.txt  requirements-testing.txt
tests/: conftest.py  test_jwt_knox.py  urls.py
